# smellycoin

./: Cargo.toml  README.md
config/: smellycoin.conf.example
consensus/: Cargo.toml
consensus/src/: difficulty.rs  kawpow.rs  lib.rs
core/: Cargo.toml
core/src/: block.rs  lib.rs  transaction.rs  utxo.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
database/: Cargo.toml  README.md
database/src/: lib.rs
docs/: database_integration.md  implementation_plan.md  implementation_roadmap.md  json_rpc_api.md  network_mining_guide.md  node_setup.md  setup_linux_mac.md  setup_windows.md  wasm_integration.md
mining/: Cargo.toml
mining/src/: cpu.rs  lib.rs  pool.rs  stratum.rs
network/: Cargo.toml
network/src/: lib.rs  message.rs  peer.rs  sync.rs
newproj/: LICENSE  README.md  miner_config.json  pyproject.toml  requirements.txt
newproj/apps/configs/: defaults.yaml
newproj/apps/explorer/: server.py
newproj/apps/explorer/static/: style.css
newproj/apps/explorer/templates/: address.html  block.html  index.html  mempool.html  pool.html  tx.html
newproj/apps/masternode/: service.py
newproj/apps/miner/: config.py  gui_core.py  miner_config.json  pool_miner.py  smelly_gui.py  smelly_gui_test.py  solo_miner.py
newproj/apps/node/: main.py
newproj/apps/pool/: stratum_server.py
newproj/apps/wallet/: backend.py  web_ui.py
newproj/apps/wallet/static/: style.css
newproj/apps/wallet/templates/: addresses.html  blocks.html  dashboard.html  index.html  layout.html  login.html  send.html  txs.html  utxos.html  wallet.html
newproj/configs/: defaults.yaml
newproj/core/: __init__.py  config.py  consensus.py  crypto.py  db.py  rpc.py  utils.py
newproj/core/pow/: argon2_pow.py  pow_backend.py  randomx_ctypes.py  randomx_stub.py
newproj/data/: smelly.db  smelly.db-shm  smelly.db-wal
newproj/scripts/: smelly_env.bat  smelly_master_setup_and_run.bat  windows_run_help.txt
newproj/smelly_chain.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
newproj/tools/: init_dev_data.py  monitor_two_nodes.py  run.py  test_two_nodes_sync.py
rpc/: Cargo.toml
rpc/src/: lib.rs  methods.rs
src/: main.rs
storage/: Cargo.toml
storage/src/: json_store.rs  lib.rs
util/: Cargo.toml
util/src/: lib.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
wasm/static/: kawpow.js  smellycoin_worker.js
wasm/tools/ws-proxy/: index.js
