[package]
name = "smellycoin-consensus"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Consensus engine for SmellyCoin with KAWPOW algorithm"

[dependencies]
bytemuck = "1.14"
byteorder = "1.5"
chrono = "0.4"
log = "0.4"
once_cell = "1.18"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"

smellycoin-core = { path = "../core" }
smellycoin-crypto = { path = "../crypto" }
smellycoin-util = { path = "../util" }

[features]
default = ["cpu_miner"]
cpu_miner = []
gpu_opencl = []
gpu_cuda = []