[package]
name = "smellycoin-crypto"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Cryptographic primitives for SmellyCoin"

[dependencies]
sha2 = "0.10"
secp256k1 = { version = "0.27", features = ["rand"] }
rand = "0.8"
hex = "0.4"
bs58 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"