[package]
name = "smellycoin-database"
version = "0.1.0"
edition = "2021"
description = "Database implementation for SmellyCoin blockchain"

[dependencies]
smellycoin-core = { path = "../core" }
smellycoin-storage = { path = "../storage" }
rusqlite = { version = "0.28", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

[features]
default = []