[package]
name = "smellycoin-mining"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Mining implementation for SmellyCoin with KAWPOW algorithm"

[dependencies]
async-trait = "0.1"
base64 = "0.21"
bytemuck = "1.14"
byteorder = "1.5"
chrono = "0.4"
futures = "0.3"
log = "0.4"
once_cell = "1.18"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

smellycoin-core = { path = "../core" }
smellycoin-consensus = { path = "../consensus" }
smellycoin-crypto = { path = "../crypto" }
smellycoin-util = { path = "../util" }

[features]
default = ["cpu_miner"]
cpu_miner = []
gpu_opencl = []
gpu_cuda = []