[package]
name = "smellycoin-network"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Networking and synchronization for SmellyCoin"

[dependencies]
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
log = "0.4"
once_cell = "1.18"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"

smellycoin-core = { path = "../core" }
smellycoin-consensus = { path = "../consensus" }
smellycoin-crypto = { path = "../crypto" }
smellycoin-storage = { path = "../storage" }
smellycoin-util = { path = "../util" }