[package]
name = "smellycoin-storage"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Blockchain storage for SmellyCoin"

[dependencies]
async-trait = "0.1"
bytes = "1.5"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.32", features = ["full"] }

smellycoin-core = { path = "../core" }
smellycoin-util = { path = "../util" }