[package]
name = "smellycoin-util"
version = "0.1.0"
edition = "2021"
authors = ["SmellyCoin Team"]
description = "Utility functions for SmellyCoin"
license = "MIT"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
bs58 = "0.5"
hex = "0.4"
chrono = "0.4"